--- a/manifest.yml
+++ b/manifest.yml
@@ -4,4 +4,4 @@ applications:
   memory: 512M
   instances: 1
   host: cf-cd-yjayaraman
-  path: package/spring--0.0.1-SNAPSHOT.war
+  path: package/cf-intro-environment-demo-0.0.1-SNAPSHOT.war
